--- a/css/style.css
+++ b/css/style.css
@@ -1,262 +1,429 @@
 :root {
-  --background-color: #0f101b;
-  --secondary-color: #22242f;
-  --headline-color: #fafaff;
-  --font-color: #a5a6b1;
-  --primary-color: #0672f1;
+    --background-color: #0f101b;
+    --secondary-color: #22242f;
+    --headline-color: #fafaff;
+    --font-color: #a5a6b1;
+    --primary-color: #0672f1;
+    --bg-light: #fff;
+    --bg-second: #f7f7f7;
+    --primary-color: #fd9d49;
+    --grey-color: #b0b0b0;
+    --icon-color: #ffe0c4;
 }
 
-*, *::before, *::after {
-  padding: 0;
-  margin: 0;
-  outline: 0;
-  scroll-behavior: smooth;
-  overscroll-behavior: smooth;
-  -webkit-box-sizing: border-box;
-  -moz-box-sizing: border-box;
-  box-sizing: border-box;
+*,
+*::before,
+*::after {
+    padding: 0;
+    margin: 0;
+    outline: 0;
+    scroll-behavior: smooth;
+    overscroll-behavior: smooth;
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
 }
 
 html {
-  -moz-text-size-adjust: 100%;
-  -ms-text-size-adjust: 100%;
-  text-size-adjust: 100%;
-  line-height: 1.6;
+    -moz-text-size-adjust: 100%;
+    -ms-text-size-adjust: 100%;
+    text-size-adjust: 100%;
+    line-height: 1.6;
 }
 
 body {
-  background-color: var(--background-color);
-  color: var(--font-color);
-  font-family: "Inter", Sans-Serif;
-  font-size: 1rem;
+    background-color: var(--background-color);
+    color: var(--font-color);
+    font-family: "Inter", Sans-Serif;
+    font-size: 1rem;
 }
 
 .wrapper {
-  position: relative;
+    position: relative;
 }
 
 .container {
-  padding: 0 1.5rem;
-  width: 100%;
-  margin: 0 auto;
+    padding: 0 1.5rem;
+    width: 100%;
+    margin: 0 auto;
 }
 
 .navbar {
-  width: 100%;
-  position: fixed;
-  top: 0;
-  left: 0;
-  animation: navbarAnimate 0.5s ease-in-out forwards;
-}
-.navbar-container {
-  margin: 0 auto;
-  max-width: 1000px;
-  padding: 0 1rem;
-  height: 65px;
-  background-color: var(--secondary-color);
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-}
-.navbar-container-left {
-  display: flex;
-  justify-content: flex-start;
-  align-items: center;
-}
-.navbar-container-right {
-  display: flex;
-  justify-content: flex-end;
-  align-items: center;
-}
-.navbar-logo {
-  width: 35px;
-  height: 35px;
-  border-radius: 50%;
-  pointer-events: none;
-}
-.navbar-brand {
-  font-weight: 600;
-  letter-spacing: -0.05rem;
-  color: var(--headline-color);
-  margin-left: 1rem;
-}
-.navbar-toggle {
-  width: 30px;
-  height: 30px;
-  background-color: transparent;
-  border: 0;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-}
-.navbar-toggle .icon {
-  display: block;
-  width: 20px;
-  background-color: var(--headline-color);
-  padding: 0.05rem 0;
-  border-radius: 5rem;
-  position: absolute;
-  transition: all 0.5s ease-in-out;
-}
-.navbar-toggle .icon:nth-child(1) {
-  animation: iconOneBefore 0.5s ease-in-out forwards;
-}
-.navbar-toggle .icon:nth-child(2) {
-  animation: iconTwoBefore 0.5s ease-in-out forwards;
-}
-.navbar-toggle.focus .icon:nth-child(1) {
-  animation-name: iconOneAfter;
-}
-.navbar-toggle.focus .icon:nth-child(2) {
-  animation-name: iconTwoAfter;
-}
-.navbar-toggle.focus .icon:nth-child(3) {
-  width: 0;
+    width: 100%;
+    position: fixed;
+    top: 0;
+    left: 0;
+    animation: navbarAnimate 0.5s ease-in-out forwards;
 }
 
-@media screen and (max-width: 768px) {
-  .navbar-menu {
-    position: fixed;
-    z-index: 5;
-    top: 0;
-    right: 0;
-    height: 100vh;
-    width: 100vw;
-    background-color: rgba(0, 0, 0, 0.25);
+.navbar-container {
+    margin: 0 auto;
+    max-width: 1000px;
+    padding: 0 1rem;
+    height: 65px;
+    background-color: var(--secondary-color);
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    border-bottom-left-radius: 10px;
+    border-bottom-right-radius: 10px;
+}
+
+.navbar-container-left {
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+}
+
+.navbar-container-right {
     display: flex;
     justify-content: flex-end;
     align-items: center;
-    transition: all 0.5s ease-in-out;
-    opacity: 0;
-    visibility: hidden;
-  }
-  .navbar-menu ul {
-    transform: translateX(300px);
-    transition: all 0.5s ease-in-out;
-    position: fixed;
-    z-index: 5;
-    top: 0;
-    right: 0;
-    background-color: var(--secondary-color);
-    height: 100vh;
-    width: 100%;
-    max-width: 225px;
-    list-style-type: none;
-  }
-  .navbar-menu ul li a {
-    text-decoration: none;
-    display: block;
-    width: 100%;
-    padding: 0.65rem 1.5rem;
-    color: var(--font-color);
-  }
-  .navbar-menu ul li a:hover, .navbar-menu ul li a:focus {
+}
+
+.navbar-logo {
+    cursor: pointer;
+    width: 35px;
+    height: 35px;
+    border-radius: 50%;
+    /* pointer-events: none; */
+}
+
+.navbar-brand {
+    font-weight: 600;
+    letter-spacing: -0.05rem;
     color: var(--headline-color);
-  }
-  .navbar-menu ul li.navbar-menu-close {
-    display: block;
-    margin: 0.75rem 1.5rem;
-    width: 40px;
-    height: 40px;
-    border-radius: 0.5rem;
+    margin-left: 1rem;
+    cursor: pointer;
+}
+
+.navbar-toggle {
+    width: 30px;
+    height: 30px;
+    background-color: transparent;
+    border: 0;
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
-    color: var(--headline-color);
-    border: 0.075rem solid var(--font-color);
-    text-align: left;
-    font-size: 1.25rem;
-    vertical-align: middle;
-  }
-  .navbar-menu.open {
-    opacity: 1;
-    visibility: visible;
-  }
-  .navbar-menu.open ul {
-    transform: translateX(0);
-  }
 }
+
+.navbar-toggle .icon {
+    display: block;
+    width: 20px;
+    background-color: var(--headline-color);
+    padding: 0.05rem 0;
+    border-radius: 5rem;
+    position: absolute;
+    transition: all 0.5s ease-in-out;
+}
+
+.navbar-toggle .icon:nth-child(1) {
+    animation: iconOneBefore 0.5s ease-in-out forwards;
+}
+
+.navbar-toggle .icon:nth-child(2) {
+    animation: iconTwoBefore 0.5s ease-in-out forwards;
+}
+
+.navbar-toggle.focus .icon:nth-child(1) {
+    animation-name: iconOneAfter;
+}
+
+.navbar-toggle.focus .icon:nth-child(2) {
+    animation-name: iconTwoAfter;
+}
+
+.navbar-toggle.focus .icon:nth-child(3) {
+    width: 0;
+}
+
+@media screen and (max-width: 768px) {
+    .navbar-menu {
+        position: fixed;
+        z-index: 5;
+        top: 0;
+        right: 0;
+        height: 100vh;
+        width: 100vw;
+        background-color: rgba(0, 0, 0, 0.25);
+        display: flex;
+        justify-content: flex-end;
+        align-items: center;
+        transition: all 0.5s ease-in-out;
+        opacity: 0;
+        visibility: hidden;
+    }
+    .navbar-menu ul {
+        transform: translateX(300px);
+        transition: all 0.5s ease-in-out;
+        position: fixed;
+        z-index: 5;
+        top: 0;
+        right: 0;
+        background-color: var(--secondary-color);
+        height: 100vh;
+        width: 100%;
+        max-width: 225px;
+        list-style-type: none;
+    }
+    .navbar-menu ul li a {
+        text-decoration: none;
+        display: block;
+        width: 100%;
+        padding: 0.65rem 1.5rem;
+        color: var(--font-color);
+    }
+    .navbar-menu ul li a:hover,
+    .navbar-menu ul li a:focus {
+        color: var(--headline-color);
+    }
+    .navbar-menu ul li.navbar-menu-close {
+        display: block;
+        margin: 0.75rem 1.5rem;
+        width: 40px;
+        height: 40px;
+        border-radius: 0.5rem;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        color: var(--headline-color);
+        border: 0.075rem solid var(--font-color);
+        text-align: left;
+        font-size: 1.25rem;
+        /* vertical-align: middle; */
+    }
+    .navbar-menu.open {
+        opacity: 1;
+        visibility: visible;
+    }
+    .navbar-menu.open ul {
+        transform: translateX(0);
+    }
+    /* .col-3 {
+        width: 100%;
+    }
+    .col-9 {
+        width: 100%;
+    }
+    .col-12 {
+        width: 100%;
+    } */
+}
+
 @media screen and (min-width: 768px) {
-  .navbar-container {
-    justify-content: flex-start;
-  }
-  .navbar-container-right {
-    justify-content: flex-start;
-    padding-left: 1.5rem;
-  }
-  .navbar-toggle {
-    display: none;
-  }
-  .navbar-menu ul {
-    list-style-type: none;
-    display: flex;
-    flex-direction: row;
-  }
-  .navbar-menu ul li.navbar-menu-close {
-    display: none;
-  }
-  .navbar-menu ul li a {
-    font-weight: 500;
-    color: var(--font-color);
-    text-decoration: none;
-    padding: 1.275rem 0.75rem;
-    transition: all 0.25s ease-in-out;
-  }
-  .navbar-menu ul li a:hover, .navbar-menu ul li a:focus {
-    color: var(--headline-color);
-    border-bottom: 0.15rem solid var(--primary-color);
-  }
+    .navbar-container {
+        justify-content: flex-start;
+    }
+    .navbar-container-right {
+        justify-content: flex-start;
+        padding-left: 1.5rem;
+    }
+    .navbar-toggle {
+        display: none;
+    }
+    .navbar-menu ul {
+        list-style-type: none;
+        display: flex;
+        flex-direction: row;
+    }
+    .navbar-menu ul li.navbar-menu-close {
+        display: none;
+    }
+    .navbar-menu ul li a {
+        font-weight: 500;
+        color: var(--font-color);
+        text-decoration: none;
+        padding: 1.275rem 0.75rem;
+        transition: all 0.25s ease-in-out;
+    }
+    .navbar-menu ul li a:hover,
+    .navbar-menu ul li a:focus {
+        color: var(--headline-color);
+        border-bottom: 0.15rem solid var(--primary-color);
+    }
 }
+
 @keyframes navbarAnimate {
-  from {
-    transform: translateY(-100px);
-  }
-  to {
-    transform: translateY(0);
-  }
+    from {
+        transform: translateY(-100px);
+    }
+    to {
+        transform: translateY(0);
+    }
 }
+
 @keyframes iconOneBefore {
-  0%, 33.333333% {
-    transform: translateY(0) rotate(45deg);
-  }
-  33.333333%, 66.666666% {
-    transform: translateY(0) rotate(0deg);
-  }
-  66.666666%, 100% {
-    transform: translateY(6.5px) rotate(0deg);
-  }
+    0%,
+    33.333333% {
+        transform: translateY(0) rotate(45deg);
+    }
+    33.333333%,
+    66.666666% {
+        transform: translateY(0) rotate(0deg);
+    }
+    66.666666%,
+    100% {
+        transform: translateY(6.5px) rotate(0deg);
+    }
 }
+
 @keyframes iconOneAfter {
-  0%, 33.333333% {
-    transform: translateY(6.5px) rotate(0deg);
-  }
-  33.333333%, 66.666666% {
-    transform: translateY(0) rotate(0deg);
-  }
-  66.666666%, 100% {
-    transform: translateY(0) rotate(45deg);
-  }
+    0%,
+    33.333333% {
+        transform: translateY(6.5px) rotate(0deg);
+    }
+    33.333333%,
+    66.666666% {
+        transform: translateY(0) rotate(0deg);
+    }
+    66.666666%,
+    100% {
+        transform: translateY(0) rotate(45deg);
+    }
 }
+
 @keyframes iconTwoBefore {
-  0%, 33.333333% {
-    transform: translateY(0) rotate(-45deg);
-  }
-  33.333333%, 66.666666% {
-    transform: translateY(0) rotate(0deg);
-  }
-  66.666666%, 100% {
-    transform: translateY(-6.5px) rotate(0deg);
-  }
+    0%,
+    33.333333% {
+        transform: translateY(0) rotate(-45deg);
+    }
+    33.333333%,
+    66.666666% {
+        transform: translateY(0) rotate(0deg);
+    }
+    66.666666%,
+    100% {
+        transform: translateY(-6.5px) rotate(0deg);
+    }
 }
+
 @keyframes iconTwoAfter {
-  0%, 33.333333% {
-    transform: translateY(-6.5px) rotate(0deg);
-  }
-  33.333333%, 66.666666% {
-    transform: translateY(0) rotate(0deg);
-  }
-  66.666666%, 100% {
-    transform: translateY(0) rotate(-45deg);
-  }
+    0%,
+    33.333333% {
+        transform: translateY(-6.5px) rotate(0deg);
+    }
+    33.333333%,
+    66.666666% {
+        transform: translateY(0) rotate(0deg);
+    }
+    66.666666%,
+    100% {
+        transform: translateY(0) rotate(-45deg);
+    }
+}
+
+.col-3 {
+    width: 30%;
+}
+
+.col-9 {
+    width: 70%;
+}
+
+.col-12 {
+    width: 100%;
+}
+
+[class*="col-"] {
+    float: left;
+    padding: 10px;
+    /* border: 1px solid red; */
+}
+
+.container {
+    padding: 10px;
+    margin-top: 100px;
+}
+
+.img-responsive {
+    max-width: 100%;
+    height: auto;
+}
+
+
+/* Clear floats after the columns */
+
+.row::after {
+    content: "";
+    clear: both;
+    display: table;
+}
+
+
+/*CARD*/
+
+.card {
+    overflow: hidden;
+    background-color: var(--bg-light);
+    border-radius: 10px;
+    -webkit-box-shadow: 0px 6px 31px -18px rgba(0, 0, 0, 0.4);
+    -moz-box-shadow: 0px 6px 31px -18px rgba(0, 0, 0, 0.4);
+    box-shadow: 0px 6px 31px -18px rgba(0, 0, 0, 0.4);
+    margin: 0px 90px;
+}
+
+.card-logo {
+    overflow: hidden;
+    background-color: var(--bg-light);
+    border-radius: 10px;
+    -webkit-box-shadow: 0px 6px 31px -18px rgba(0, 0, 0, 0.4);
+    -moz-box-shadow: 0px 6px 31px -18px rgba(0, 0, 0, 0.4);
+    box-shadow: 0px 6px 31px -18px rgba(0, 0, 0, 0.4);
+    margin-left: 90px;
+}
+
+.card-content {
+    overflow: hidden;
+    background-color: var(--bg-light);
+    border-radius: 10px;
+    -webkit-box-shadow: 0px 6px 31px -18px rgba(0, 0, 0, 0.4);
+    -moz-box-shadow: 0px 6px 31px -18px rgba(0, 0, 0, 0.4);
+    box-shadow: 0px 6px 31px -18px rgba(0, 0, 0, 0.4);
+    margin-right: 90px;
+}
+
+.card-body {
+    padding: 20px;
+}
+
+.card-body-left {
+    padding: 20px;
+}
+
+.card-heading {
+    padding: 20px;
+    border-bottom: 1px solid var(--bg-second);
+}
+
+
+/*END CARD*/
+
+.h3 {
+    font-size: 24px;
+    font-weight: bold;
+}
+
+.h4 {
+    font-size: 22px;
+    font-weight: bold;
+}
+
+.text-primary {
+    color: var(--primary-color);
+}
+
+.icon-circle {
+    background-color: var(--icon-color);
+    border-radius: 10%;
+    padding: 5px 10px 5px 10px;
+}
+
+.subtitle {
+    font-weight: 200;
+    font-size: 12px;
+}
+
+.text-muted {
+    color: var(--grey-color);
 }
